# Moedict-Android

./: .gitignore  README.md
moe-converter/: .gitignore  CMakeLists.txt  README.md  requirements.txt  tasks.py
moe-converter/fbs/: hakka.fbs  index.fbs  moe.fbs  moe_categories.fbs  moe_radical.fbs  taiwan.fbs  u16string.fbs
moe-converter/include/: converter.h  hakka_converter.h  index_converter.h  moe_categories_converter.h  moe_converter.h  moe_radical_converter.h  taiwan_converter.h  text_utils.h
moe-converter/src/: converter.cpp  hakka_converter.cpp  index_converter.cpp  main.cpp  moe_categories_converter.cpp  moe_converter.cpp  moe_radical_converter.cpp  taiwan_converter.cpp  text_utils.cpp
moedict-android/: .gitignore  build.gradle  gradle.properties
moedict-android/app/: build.gradle  proguard-rules.pro
moedict-android/app/src/main/: AndroidManifest.xml
moedict-android/app/src/main/java/com/yichiuan/moedict/: AppComponent.java  AppComponent.kt  AppModule.java  AppModule.kt  BuilderModule.java  BuilderModule.kt  MoeApplication.java  MoeApplication.kt
moedict-android/app/src/main/java/moe/: Categories.java  Category.java  Definition.java  Dictionary.java  Heteronym.java  Index.java  Radical.java  RadicalTable.java  Translation.java  UTF16String.java  Word.java  Words.java
moedict-android/app/src/main/java/moe/hakka/: Definition.java  Dictionary.java  Heteronym.java  Word.java
moedict-android/app/src/main/java/moe/taiwan/: Definition.java  Dictionary.java  Heteronym.java  Word.java
moedict-android/app/src/main/res/drawable/: label_drawable.xml
moedict-android/app/src/main/res/layout/: activity_main.xml  activity_search.xml  item_definition.xml  item_heteronym.xml  item_search_result.xml
moedict-android/app/src/main/res/menu/: menu_main.xml
moedict-android/app/src/main/res/values/: attrs_static_text_view.xml  dimens.xml  strings.xml  styles.xml
moedict-android/app/src/main/res/xml/: searchable.xml
(+33 files in other folders)
